// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FocusOverlay renders correctly when left is focused 1`] = `
<DocumentFragment>
  .cache-bxae8r-StyledDiv {
  position: absolute;
  height: calc(100% - 8px);
  border-radius: 4px;
  background: #4f0599;
  transform-origin: left center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-bxae8r-StyledDiv[data-focusposition='right'] {
  transform-origin: right center;
}

<div
    class="cache-bxae8r-StyledDiv e11rfazh0"
    data-focusposition="left"
    style="transform: translate3d(0px, 0, 0) scale3d(1, 1, 1); width: 400px;"
  />
</DocumentFragment>
`;

exports[`FocusOverlay renders correctly when left is focused and has mouse down 1`] = `
<DocumentFragment>
  .cache-bxae8r-StyledDiv {
  position: absolute;
  height: calc(100% - 8px);
  border-radius: 4px;
  background: #4f0599;
  transform-origin: left center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-bxae8r-StyledDiv[data-focusposition='right'] {
  transform-origin: right center;
}

<div
    class="cache-bxae8r-StyledDiv e11rfazh0"
    data-focusposition="left"
    style="transform: translate3d(0px, 0, 0) scale3d(1.015, 1, 1); width: 400px;"
  />
</DocumentFragment>
`;

exports[`FocusOverlay renders correctly when right is focused 1`] = `
<DocumentFragment>
  .cache-bxae8r-StyledDiv {
  position: absolute;
  height: calc(100% - 8px);
  border-radius: 4px;
  background: #4f0599;
  transform-origin: left center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-bxae8r-StyledDiv[data-focusposition='right'] {
  transform-origin: right center;
}

<div
    class="cache-bxae8r-StyledDiv e11rfazh0"
    data-focusposition="right"
    style="transform: translate3d(408px, 0, 0) scale3d(1, 1, 1); width: 200px;"
  />
</DocumentFragment>
`;

exports[`FocusOverlay renders correctly when right is focused and has mouse down 1`] = `
<DocumentFragment>
  .cache-bxae8r-StyledDiv {
  position: absolute;
  height: calc(100% - 8px);
  border-radius: 4px;
  background: #4f0599;
  transform-origin: left center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-bxae8r-StyledDiv[data-focusposition='right'] {
  transform-origin: right center;
}

<div
    class="cache-bxae8r-StyledDiv e11rfazh0"
    data-focusposition="right"
    style="transform: translate3d(408px, 0, 0) scale3d(1.03, 1, 1); width: 200px;"
  />
</DocumentFragment>
`;

exports[`SwitchButton renders correctly 1`] = `
<DocumentFragment>
  .cache-fo08zx-BorderedBox-StyledBorderedBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  position: relative;
}

.cache-1lt0w3z-Container-StyledSelectableCard {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
  border: none;
  height: 40px;
  padding: 8px 16px;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-1lt0w3z-Container-StyledSelectableCard[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-1lt0w3z-Container-StyledSelectableCard[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-1lt0w3z-Container-StyledSelectableCard[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-1lt0w3z-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1lt0w3z-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1lt0w3z-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-1lt0w3z-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1lt0w3z-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1lt0w3z-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-1lt0w3z-Container-StyledSelectableCard:hover,
.cache-1lt0w3z-Container-StyledSelectableCard:focus-within,
.cache-1lt0w3z-Container-StyledSelectableCard:active {
  box-shadow: none;
  border: none;
}

.cache-1lt0w3z-Container-StyledSelectableCard:hover:not([data-error='true'][data-disabled='true']),
.cache-1lt0w3z-Container-StyledSelectableCard:focus-within:not([data-error='true'][data-disabled='true']),
.cache-1lt0w3z-Container-StyledSelectableCard:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.cache-1lt0w3z-Container-StyledSelectableCard[data-checked='true'] {
  border: none;
}

.cache-1lt0w3z-Container-StyledSelectableCard[data-checked='true']>label {
  color: #ffffff;
}

.cache-1lt0w3z-Container-StyledSelectableCard:not([data-checked='true'])>label:hover {
  color: #4f0599;
}

.cache-1nknr80-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1nknr80-RadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1nknr80-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-left]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1nknr80-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-left]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1nknr80-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-left][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1nknr80-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-left][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1nknr80-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1nknr80-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1nknr80-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1nknr80-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-1nknr80-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-1nknr80-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-1nknr80-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-2mgpes-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-2mgpes-RadioInput+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-2mgpes-RadioInput:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-2mgpes-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-2mgpes-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.e1duuirp2 {
  fill: #a6102d;
}

.cache-2mgpes-RadioInput:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-2mgpes-RadioInput:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-2mgpes-RadioInput[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-2mgpes-RadioInput[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

.cache-dirs5e-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-dirs5e-RadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-dirs5e-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-right]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-dirs5e-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-right]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-dirs5e-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-right][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-dirs5e-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-right][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-dirs5e-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-dirs5e-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-dirs5e-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-dirs5e-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-dirs5e-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-dirs5e-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-dirs5e-RadioContainer-StyledElement input+svg {
  display: none;
}

<div
    style="display: inline-flex;"
  >
    <div
      class="cache-fo08zx-BorderedBox-StyledBorderedBox e16krxq01"
    >
      <div
        class="e16krxq00 cache-1lt0w3z-Container-StyledSelectableCard ejleepd1"
        data-checked="false"
        data-disabled="false"
      >
        <label
          aria-disabled="false"
          class="ejleepd0 cache-1nknr80-RadioContainer-StyledElement e1duuirp0"
          data-checked="false"
          for="test-left"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="cache-2mgpes-RadioInput e1duuirp1"
            id="test-left"
            name="test"
            type="radio"
            value="left"
          />
          <svg
            class="cache-gjpbat-StyledIcon e1duuirp2"
            size="24"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="8"
                stroke-width="2"
              />
              <circle
                class="cache-p50c5x-InnerCircleRing e1duuirp4"
                cx="12"
                cy="12"
                r="6"
              />
              <circle
                class="cache-ivayk3-RadioMark e1duuirp3"
                cx="12"
                cy="12"
                r="4"
              />
            </g>
          </svg>
          Left
        </label>
      </div>
      <div
        class="e16krxq00 cache-1lt0w3z-Container-StyledSelectableCard ejleepd1"
        data-checked="true"
        data-disabled="false"
      >
        <label
          aria-disabled="false"
          class="ejleepd0 cache-dirs5e-RadioContainer-StyledElement e1duuirp0"
          data-checked="true"
          for="test-right"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            checked=""
            class="cache-2mgpes-RadioInput e1duuirp1"
            id="test-right"
            name="test"
            type="radio"
            value="right"
          />
          <svg
            class="cache-gjpbat-StyledIcon e1duuirp2"
            size="24"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="8"
                stroke-width="2"
              />
              <circle
                class="cache-p50c5x-InnerCircleRing e1duuirp4"
                cx="12"
                cy="12"
                r="6"
              />
              <circle
                class="cache-ivayk3-RadioMark e1duuirp3"
                cx="12"
                cy="12"
                r="4"
              />
            </g>
          </svg>
          Right
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly with right value 1`] = `
<DocumentFragment>
  .cache-fo08zx-BorderedBox-StyledBorderedBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  position: relative;
}

.cache-1lt0w3z-Container-StyledSelectableCard {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
  border: none;
  height: 40px;
  padding: 8px 16px;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-1lt0w3z-Container-StyledSelectableCard[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-1lt0w3z-Container-StyledSelectableCard[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-1lt0w3z-Container-StyledSelectableCard[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-1lt0w3z-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1lt0w3z-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1lt0w3z-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-1lt0w3z-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1lt0w3z-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1lt0w3z-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-1lt0w3z-Container-StyledSelectableCard:hover,
.cache-1lt0w3z-Container-StyledSelectableCard:focus-within,
.cache-1lt0w3z-Container-StyledSelectableCard:active {
  box-shadow: none;
  border: none;
}

.cache-1lt0w3z-Container-StyledSelectableCard:hover:not([data-error='true'][data-disabled='true']),
.cache-1lt0w3z-Container-StyledSelectableCard:focus-within:not([data-error='true'][data-disabled='true']),
.cache-1lt0w3z-Container-StyledSelectableCard:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.cache-1lt0w3z-Container-StyledSelectableCard[data-checked='true'] {
  border: none;
}

.cache-1lt0w3z-Container-StyledSelectableCard[data-checked='true']>label {
  color: #ffffff;
}

.cache-1lt0w3z-Container-StyledSelectableCard:not([data-checked='true'])>label:hover {
  color: #4f0599;
}

.cache-1nknr80-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1nknr80-RadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1nknr80-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-left]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1nknr80-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-left]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1nknr80-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-left][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1nknr80-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-left][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1nknr80-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1nknr80-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1nknr80-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1nknr80-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-1nknr80-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-1nknr80-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-1nknr80-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-2mgpes-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-2mgpes-RadioInput+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-2mgpes-RadioInput:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-2mgpes-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-2mgpes-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.e1duuirp2 {
  fill: #a6102d;
}

.cache-2mgpes-RadioInput:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-2mgpes-RadioInput:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-2mgpes-RadioInput[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-2mgpes-RadioInput[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

.cache-dirs5e-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-dirs5e-RadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-dirs5e-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-right]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-dirs5e-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-right]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-dirs5e-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-right][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-dirs5e-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-right][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-dirs5e-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-dirs5e-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-dirs5e-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-dirs5e-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-dirs5e-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-dirs5e-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-dirs5e-RadioContainer-StyledElement input+svg {
  display: none;
}

<div
    style="display: inline-flex;"
  >
    <div
      class="cache-fo08zx-BorderedBox-StyledBorderedBox e16krxq01"
    >
      <div
        class="e16krxq00 cache-1lt0w3z-Container-StyledSelectableCard ejleepd1"
        data-checked="false"
        data-disabled="false"
      >
        <label
          aria-disabled="false"
          class="ejleepd0 cache-1nknr80-RadioContainer-StyledElement e1duuirp0"
          data-checked="false"
          for="test-left"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="cache-2mgpes-RadioInput e1duuirp1"
            id="test-left"
            name="test"
            type="radio"
            value="left"
          />
          <svg
            class="cache-gjpbat-StyledIcon e1duuirp2"
            size="24"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="8"
                stroke-width="2"
              />
              <circle
                class="cache-p50c5x-InnerCircleRing e1duuirp4"
                cx="12"
                cy="12"
                r="6"
              />
              <circle
                class="cache-ivayk3-RadioMark e1duuirp3"
                cx="12"
                cy="12"
                r="4"
              />
            </g>
          </svg>
          Left
        </label>
      </div>
      <div
        class="e16krxq00 cache-1lt0w3z-Container-StyledSelectableCard ejleepd1"
        data-checked="true"
        data-disabled="false"
      >
        <label
          aria-disabled="false"
          class="ejleepd0 cache-dirs5e-RadioContainer-StyledElement e1duuirp0"
          data-checked="true"
          for="test-right"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            checked=""
            class="cache-2mgpes-RadioInput e1duuirp1"
            id="test-right"
            name="test"
            type="radio"
            value="right"
          />
          <svg
            class="cache-gjpbat-StyledIcon e1duuirp2"
            size="24"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="8"
                stroke-width="2"
              />
              <circle
                class="cache-p50c5x-InnerCircleRing e1duuirp4"
                cx="12"
                cy="12"
                r="6"
              />
              <circle
                class="cache-ivayk3-RadioMark e1duuirp3"
                cx="12"
                cy="12"
                r="4"
              />
            </g>
          </svg>
          Right
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchButton renders with tooltip 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-fo08zx-BorderedBox-StyledBorderedBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  position: relative;
}

.cache-1lt0w3z-Container-StyledSelectableCard {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
  border: none;
  height: 40px;
  padding: 8px 16px;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-1lt0w3z-Container-StyledSelectableCard[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-1lt0w3z-Container-StyledSelectableCard[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-1lt0w3z-Container-StyledSelectableCard[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-1lt0w3z-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1lt0w3z-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1lt0w3z-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-1lt0w3z-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1lt0w3z-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1lt0w3z-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-1lt0w3z-Container-StyledSelectableCard:hover,
.cache-1lt0w3z-Container-StyledSelectableCard:focus-within,
.cache-1lt0w3z-Container-StyledSelectableCard:active {
  box-shadow: none;
  border: none;
}

.cache-1lt0w3z-Container-StyledSelectableCard:hover:not([data-error='true'][data-disabled='true']),
.cache-1lt0w3z-Container-StyledSelectableCard:focus-within:not([data-error='true'][data-disabled='true']),
.cache-1lt0w3z-Container-StyledSelectableCard:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.cache-1lt0w3z-Container-StyledSelectableCard[data-checked='true'] {
  border: none;
}

.cache-1lt0w3z-Container-StyledSelectableCard[data-checked='true']>label {
  color: #ffffff;
}

.cache-1lt0w3z-Container-StyledSelectableCard:not([data-checked='true'])>label:hover {
  color: #4f0599;
}

.cache-1nknr80-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1nknr80-RadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1nknr80-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-left]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1nknr80-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-left]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1nknr80-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-left][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1nknr80-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-left][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1nknr80-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1nknr80-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1nknr80-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1nknr80-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-1nknr80-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-1nknr80-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-1nknr80-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-2mgpes-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-2mgpes-RadioInput+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-2mgpes-RadioInput:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-2mgpes-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-2mgpes-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.e1duuirp2 {
  fill: #a6102d;
}

.cache-2mgpes-RadioInput:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-2mgpes-RadioInput:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-2mgpes-RadioInput[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-2mgpes-RadioInput[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

.cache-dirs5e-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-dirs5e-RadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-dirs5e-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-right]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-dirs5e-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-right]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-dirs5e-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-right][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-dirs5e-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=test-right][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-dirs5e-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-dirs5e-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-dirs5e-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-dirs5e-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-dirs5e-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-dirs5e-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-dirs5e-RadioContainer-StyledElement input+svg {
  display: none;
}

<div
    aria-describedby=":ra:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
  >
    <div
      style="display: inline-flex;"
    >
      <div
        class="cache-fo08zx-BorderedBox-StyledBorderedBox e16krxq01"
      >
        <div
          class="e16krxq00 cache-1lt0w3z-Container-StyledSelectableCard ejleepd1"
          data-checked="false"
          data-disabled="false"
        >
          <label
            aria-disabled="false"
            class="ejleepd0 cache-1nknr80-RadioContainer-StyledElement e1duuirp0"
            data-checked="false"
            for="test-left"
          >
            <input
              aria-disabled="false"
              aria-invalid="false"
              class="cache-2mgpes-RadioInput e1duuirp1"
              id="test-left"
              name="test"
              type="radio"
              value="left"
            />
            <svg
              class="cache-gjpbat-StyledIcon e1duuirp2"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="8"
                  stroke-width="2"
                />
                <circle
                  class="cache-p50c5x-InnerCircleRing e1duuirp4"
                  cx="12"
                  cy="12"
                  r="6"
                />
                <circle
                  class="cache-ivayk3-RadioMark e1duuirp3"
                  cx="12"
                  cy="12"
                  r="4"
                />
              </g>
            </svg>
            Left
          </label>
        </div>
        <div
          class="e16krxq00 cache-1lt0w3z-Container-StyledSelectableCard ejleepd1"
          data-checked="true"
          data-disabled="false"
        >
          <label
            aria-disabled="false"
            class="ejleepd0 cache-dirs5e-RadioContainer-StyledElement e1duuirp0"
            data-checked="true"
            for="test-right"
          >
            <input
              aria-disabled="false"
              aria-invalid="false"
              checked=""
              class="cache-2mgpes-RadioInput e1duuirp1"
              id="test-right"
              name="test"
              type="radio"
              value="right"
            />
            <svg
              class="cache-gjpbat-StyledIcon e1duuirp2"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="8"
                  stroke-width="2"
                />
                <circle
                  class="cache-p50c5x-InnerCircleRing e1duuirp4"
                  cx="12"
                  cy="12"
                  r="6"
                />
                <circle
                  class="cache-ivayk3-RadioMark e1duuirp3"
                  cx="12"
                  cy="12"
                  r="4"
                />
              </g>
            </svg>
            Right
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
